munto_docs/DB정합성/v1/소셜링 참여 취소 규칙 명세서.md
# 소셜링 참여/취소 규칙 명세서

> 작성일: 2026-04-16
관련 이슈: WEBB-1321
주문/결제 세부 규칙: [소셜링 결제/환불 규칙 명세서](https://www.notion.so/348e2bc7639d8076854ac458d47f8fd3?pvs=21)
> 

---

## 1. 핵심 개념

### 1-1. 관련 테이블

| 테이블 | 소셜링 도메인에서의 역할 |
| --- | --- |
| `Socialing` | 소셜링 메인. 정원·상태·모집 조건 소유 |
| `SocialingMember` | 참가자. 참여 상태와 참여권(Order) 1:1 보유 |
| `Order` | 참여권의 존재 증명. 유료·무료 구분 없이 항상 존재 |

> `SocialingMember.orderId`는 `NOT NULL @unique` — 참가자는 반드시 하나의 Order를 가진다.
Order 내부 동작(결제 방식, PG 연동, 환불 실행)은 주문 도메인 문서에서 다룬다.
> 

### 1-2. SocialingRecruitType

```
COMMON  선착순: 결제 확정 즉시 APPROVE
CHOICE  승인제: 결제 확정 시 REQUEST → 호스트 승인 후 APPROVE
```

### 1-3. SocialingMemberStatus

```
REQUEST   승인 대기 (승인제 신청 직후)
APPROVE   참여 확정
REJECT    거절 (호스트가 REQUEST 거절)
CANCEL    취소 (본인 취소 / 자동 취소)
KICK      강퇴
DELETE    UI 삭제 처리
```

### 1-4. SocialingMemberGrade

```
HOST    호스트. 소셜링 생성자. 1명. 결제 없이 참여
STAFF   스태프. 호스트가 지정. 최대 5명. 결제 후 COMPLETE 시 전액 환불
MEMBER  일반 참여자
```

### 1-4. Socialing.status (ItemStatus)

```
PLANNING         준비 중 (비공개)
RECRUITING       모집 중
CONFIRM_PLAYING  진행 확정 (시작 1시간 전, 최소 인원 충족)
CLOSE_BY_SYSTEM  자동 폐강 (시작 1시간 전, 최소 인원 미달)
CLOSE            호스트 직접 폐강
COMPLETE         진행 완료
```

---

## 2. 핵심 불변식 (Invariants)

모든 쓰기 작업은 아래 불변식을 보존해야 한다.

### Invariant 1 — 정원 정합성

```
Socialing.availCount
  = Socialing.maximumPerson
  - COUNT(SocialingMember WHERE socialingId = this.id AND status = 'APPROVE')
```

- `availCount < 0` 불가
- `availCount > maximumPerson` 불가

### Invariant 2 — 성별 정원 정합성

```
maleMaximumCount > 0인 경우:
  COUNT(APPROVE WHERE User.sex = MALE) ≤ maleMaximumCount

femaleMaximumCount > 0인 경우:
  COUNT(APPROVE WHERE User.sex = FEMALE) ≤ femaleMaximumCount
```

### Invariant 3 — 참여권 정합성

```
SocialingMember는 반드시 하나의 Order를 가진다 (유료·무료 무관)

Member.status = APPROVE  →  Order 존재, 참여 유효
Member.status = REQUEST  →  Order 존재, 참여 보류
Member.status ∈ {CANCEL, KICK, REJECT}
                         →  Order 존재, 참여 종료 (환불 처리됨 또는 예정)
```

Order의 상태(orderStatus) 전이 규칙은 주문 도메인 문서에서 정의한다.

### Invariant 4 — 소셜링 상태별 멤버 정합성

```
Socialing.status = CONFIRM_PLAYING  →  SocialingMember.status ≠ REQUEST
Socialing.status = CLOSE_BY_SYSTEM  →  SocialingMember.status ∉ {REQUEST, APPROVE}
Socialing.status = CLOSE            →  SocialingMember.status ∉ {REQUEST, APPROVE}
Socialing.status = COMPLETE         →  SocialingMember.status ≠ REQUEST
```

### Invariant 5 — 미승인 타임아웃

```
아래 조건 중 하나라도 해당하면 즉시 CANCEL 대상:
  A. status = REQUEST AND createdAt < NOW() - 24h AND Socialing.status = RECRUITING
  B. status = REQUEST AND Socialing.status ∉ {PLANNING, RECRUITING}
```

---

## 3. 소셜링 상태 전이 규칙

```
PLANNING
  └→ RECRUITING        (호스트 공개)

RECRUITING
  ├→ CLOSE             (호스트 직접 폐강)
  ├→ CONFIRM_PLAYING   (스케줄러: startDate 1시간 전, approvedCount >= minimumPerson)
  └→ CLOSE_BY_SYSTEM   (스케줄러: startDate 1시간 전, approvedCount < minimumPerson)

CONFIRM_PLAYING
  └→ COMPLETE          (스케줄러: startDate 도달)
```

상태 전이는 단방향이며 역방향 전이는 불가하다.

---

## 4. 참여 신청 플로우

### 4-1. 사전 검증 규칙

결제 시작 전 다음 조건을 순서대로 검증한다.

```
1. 소셜링이 존재해야 함
2. 신청자 ≠ 호스트
3. 동일 소셜링에 status ∈ {REQUEST, APPROVE}인 기존 멤버 없어야 함
   (CANCEL·REJECT 후 재신청은 허용)
4. Socialing.status = RECRUITING
5. Socialing.availCount > 0
6. Socialing.startDate > NOW()
7. 성별 상한 조건 충족 (Invariant 2)
8. recruitScope = CLUB → 신청자가 해당 클럽 멤버여야 함
9. 신청자의 정지 기간이 소셜링 기간과 겹치지 않아야 함
```

### 4-2. 주문 생성 규칙

```
- 4-1 검증 재실행
- 금액 일치 검증: payload.orderPrice = 최종 결제 금액
- 동일 userId + socialingId + status=WAITING_PAYMENT 주문이 이미 있으면 재사용
- 없으면 새 Order 생성
- 무료 소셜링(price = 0)도 동일하게 Order 생성 (결제 실행 여부만 다름)
```

### 4-3. 결제 확정 규칙

```
[단계 A] 재검증:
  - Socialing.status = RECRUITING
  - Socialing.availCount > 0

[단계 B] 결제 처리 (주문 도메인):
  - 유료: PG 결제 승인 실행
  - 무료: PG 호출 없이 바로 다음 단계

[단계 C] DB 트랜잭션:
  - Order.status → COMPLETED_PAYMENT
  - createSocialingMember() 실행 (4-4 참고)
```

A와 C 사이의 동시 요청을 막기 위해 availCount 차감은 반드시 C 트랜잭션 내에서 원자적으로 처리한다.

### 4-4. 멤버 생성 및 정원 차감 규칙

트랜잭션 내에서 실행된다.

```
FUNCTION createSocialingMember(userId, socialingId, orderId, recruitType, tx):

  [멤버 상태 결정]
  COMMON(선착순)  →  status = APPROVE, approvedAt = NOW()
  CHOICE(승인제)  →  status = REQUEST,  approvedAt = null

  [SocialingMember UPSERT]
  ON CONFLICT (socialingId, userId):
    UPDATE: { orderId, status, approvedAt }  ← 재신청 케이스
  ON CREATE:
    INSERT: { socialingId, userId, orderId, status, approvedAt, grade: MEMBER }

  [정원 차감 — status = APPROVE인 경우만]
  updated = tx.Socialing.updateMany(
    WHERE id = socialingId AND availCount > 0,
    DATA { availCount: decrement(1) }
  )
  IF updated.count ≠ 1 → TX ROLLBACK  ← 정원 초과 방어

  [성별 정원 차감 검증]
  IF maleMaximumCount > 0 또는 femaleMaximumCount > 0:
    성별별 APPROVE 인원 재확인 → Invariant 2 위반 시 TX ROLLBACK
```

### 4-5. 재신청 규칙

```
- status ∈ {CANCEL, REJECT}인 멤버는 동일 소셜링에 재신청 가능
- (socialingId, userId) unique constraint → UPSERT로 처리
- 재신청 시 새 Order 생성 (기존 Order와 별개)
- SocialingMember.orderId는 새 orderId로 업데이트
- 4-1 사전 검증 전체 재실행 (availCount, 성별 조건 등)
```

---

## 5. 호스트 작업 규칙

### 5-1. 승인 (approve) — 승인제 전용

```
FUNCTION approve(socialingId, memberId):

  [선행 검증]
  - member.status = APPROVE → 이미 승인됨, 멱등 처리 후 종료
  - member.status ≠ REQUEST → 승인 불가

  [트랜잭션]
  BEGIN:
    updated = Socialing.updateMany(WHERE id=socialingId AND availCount > 0, DECREMENT 1)
    IF updated.count ≠ 1 → ROLLBACK  ← 정원 없음

    SocialingMember.status = REQUEST → APPROVE
    SocialingMember.approvedAt = NOW()

    IF 얼리버드 소셜링 && 혜택 조건 충족:
      DiscountAndSocialingMember 생성
  COMMIT
```

### 5-2. 거절 (reject) — 승인제 전용

```
FUNCTION reject(socialingId, memberId):

  [선행 검증]
  - member.status ≠ REQUEST → 거절 불가
  - member.status = REJECT  → 이미 거절됨, 멱등 처리 후 종료

  [트랜잭션]
  BEGIN:
    SocialingMember.status = REQUEST → REJECT
    ← availCount 변화 없음 (REQUEST는 정원을 차지하지 않음)
  COMMIT

  [취소 처리 위임 → 주문 도메인]
  유료 참여였다면 환불 처리 요청
  Order.status 전이는 주문 도메인에서 수행
```

### 5-3. 등급 변경 (grade update)

```
FUNCTION updateSocialingMemberGrade(hostId, socialingId, members[{userId, grade}]):

  [선행 검증]
  - 호출자 = 소셜링 호스트여야 함
  - Socialing.status = RECRUITING
  - 유료 소셜링만 적용 가능 (price > 0)
  - startDate 당일에는 변경 불가
  - MEMBER → STAFF 전환은 소셜링 생성 후 24시간 이내만 허용
  - STAFF 총 인원이 5명을 초과하면 불가

  [트랜잭션]
  FOR EACH member in payload:
    BEGIN:
      SocialingMember.grade = 새 grade

      IF 새 grade = STAFF AND member 얼리버드 보유:
        얼리버드 혜택을 다음 순번 멤버에게 이전 (handOverEarlyBirdBenefit)

      IF 새 grade = MEMBER AND 소셜링 얼리버드 활성:
        해당 멤버에게 얼리버드 혜택 부여 (applyEarlyBirdBenefit)
    COMMIT

  [결제 처리]
  grade 변경 시 즉각적인 환불은 없음
  STAFF 환불은 소셜링 COMPLETE 시점에 일괄 처리
```

### 5-4. 킥 (kick)

```
FUNCTION kick(socialingId, memberId):

  [선행 검증]
  - member.status ≠ APPROVE → 킥 불가 (APPROVE 상태만 킥 가능)
  - member.status = KICK    → 이미 킥됨, 멱등 처리 후 종료
  - member.grade = STAFF이고 호출자가 HOST가 아닌 경우 → 킥 불가
    (STAFF는 HOST만 킥 가능, 일반 STAFF 간 킥 불가)

  [트랜잭션]
  BEGIN:
    SocialingMember.status = APPROVE → KICK
    Socialing.availCount += 1

    IF member가 얼리버드 보유:
      다음 순번 멤버에게 얼리버드 혜택 이전
  COMMIT

  [취소 처리 위임 → 주문 도메인]
  유료 참여였다면 환불 처리 요청
```

---

## 6. 취소 규칙

### 6-1. 멤버 본인 취소

```
FUNCTION cancel(socialingId, userId, cancelReason?):

  [선행 검증]
  - member.status = CANCEL → 이미 취소됨, 멱등 처리 후 종료

  wasApprove = member.status = APPROVE

  [트랜잭션]
  BEGIN:
    SocialingMember.status → CANCEL
    SocialingMember.canceledAt = NOW()
    SocialingMember.cancelReason = cancelReason

    IF wasApprove:
      Socialing.availCount += 1

    IF member가 얼리버드 보유:
      다음 순번 멤버에게 얼리버드 혜택 이전
  COMMIT

  [취소 처리 위임 → 주문 도메인]
  wasApprove AND 유료 참여였다면 환불 처리 요청

  참고: REQUEST 취소 시 availCount 변화 없음
```

### 6-2. 호스트 직접 폐강 (CLOSE)

```
FUNCTION closeSocialingByHost(socialingId, hostUserId):

  [선행 검증]
  - Socialing.userId ≠ hostUserId → ForbiddenException
  - Socialing.status ≠ RECRUITING → 폐강 불가

  [상태 변경]
  Socialing.status = CLOSE, Socialing.closedAt = NOW()

  [멤버 일괄 처리]
  FOR EACH member WHERE status ∈ {REQUEST, APPROVE}:
    BEGIN TX:
      member.status → CANCEL
      IF member.status was APPROVE: Socialing.availCount += 1
    COMMIT

    [취소 처리 위임 → 주문 도메인]
    유료 참여였다면 환불 처리 요청
```

---

## 7. 정원 변경 규칙

정원 변경 시 `availCount`는 반드시 `newMax - currentApprovedCount`로 **재계산**한다.
`oldMax → newMax` delta 방식은 실제 인원을 반영하지 못하므로 사용 금지.

### 7-1. 호스트 정원 변경

```
FUNCTION updateMaximumPerson(socialingId, newMax):

  currentApprovedCount = COUNT(SocialingMember WHERE socialingId=id AND status=APPROVE)

  IF newMax < currentApprovedCount → BadRequestException

  BEGIN TX:
    Socialing.maximumPerson = newMax
    Socialing.availCount = newMax - currentApprovedCount
  COMMIT
```

### 7-2. 어드민 정원 변경

```
FUNCTION updateSocialingByAdmin(socialingId, newMax):

  BEGIN TX:
    currentApprovedCount = COUNT(SocialingMember WHERE socialingId=id AND status=APPROVE)
    Socialing.maximumPerson = newMax
    Socialing.availCount = newMax - currentApprovedCount
  COMMIT
```

---

## 8. 스케줄러 처리 규칙

### 8-1. CONFIRM_PLAYING 전이

```
조건: status = RECRUITING AND startDate ≤ NOW() + 1h
      AND COUNT(APPROVE) >= minimumPerson

처리:
  Socialing.status = CONFIRM_PLAYING

  FOR EACH member WHERE status = REQUEST:
    member.status → CANCEL
    ← availCount 변화 없음 (REQUEST는 정원 미차지)
    [취소 처리 위임 → 주문 도메인]
```

### 8-2. CLOSE_BY_SYSTEM 전이

```
조건: status = RECRUITING AND startDate ≤ NOW() + 1h
      AND COUNT(APPROVE) < minimumPerson

처리:
  Socialing.status = CLOSE_BY_SYSTEM

  FOR EACH member WHERE status ∈ {REQUEST, APPROVE}:
    member.status → CANCEL
    IF was APPROVE: Socialing.availCount += 1
    [취소 처리 위임 → 주문 도메인]
```

### 8-3. COMPLETE 전이

```
조건: status = CONFIRM_PLAYING AND startDate ≤ NOW()

처리:
  Socialing.status = COMPLETE
  스태프(grade = STAFF) 멤버 환불 처리 위임
```

### 8-4. 24시간 미승인 자동취소

```
대상 (아래 중 하나):
  A. status = REQUEST AND createdAt < NOW() - 24h AND Socialing.status = RECRUITING
  B. status = REQUEST AND Socialing.status ∉ {PLANNING, RECRUITING}

처리:
  member.status → CANCEL
  ← availCount 변화 없음
  [취소 처리 위임 → 주문 도메인]
```

조건 B가 필요한 이유: 8-1/8-2 처리 중 일부 멤버가 누락될 경우,
소셜링이 이미 전이됐음에도 REQUEST 상태로 잔존할 수 있다.

---

## 9. availCount 변경 규칙

| 이벤트 | 변화 | 조건 |
| --- | --- | --- |
| 선착순 결제 확정 (COMMON) | -1 | TX 내부, `WHERE availCount > 0` 원자적 처리 |
| 호스트 승인 (REQUEST → APPROVE) | -1 | TX 내부, `WHERE availCount > 0` 원자적 처리 |
| 킥 (APPROVE → KICK) | +1 | TX 내부 |
| 취소 (was APPROVE) | +1 | TX 내부 |
| 취소 (was REQUEST) | 없음 | REQUEST는 정원 미차지 |
| 거절 (REQUEST → REJECT) | 없음 | REQUEST는 정원 미차지 |
| 승인제 신청 (→ REQUEST) | 없음 | — |
| 정원 변경 | `newMax - COUNT(APPROVE)` | 재계산 (delta 방식 금지) |
| 폐강/시스템 취소 (was APPROVE) | +1 | 각 멤버 처리 시 |
| 폐강/시스템 취소 (was REQUEST) | 없음 | — |
| 소셜링 생성 | `= maximumPerson` | 생성 시 APPROVE 0명 |

---

<aside>
🔁

## **변경 이력**

</aside>

| **버전** | **일자** | **변경자** | **변경 내용** |
| --- | --- | --- | --- |
| v1.0.0 | 26.04.16 | 김범진 | 최초 작성 |